--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,7 @@ steps:
     image: plugins/git                   # 使用 plugins/git  容器
     commands:                            # 預執行的 shell 指令，這邊印出 78523 內容
     - echo "Trigger master branch"
+    - echo "Good"
     when:                                # 當觸發條件為 master 分支時會執行的動作
       branch:
       - master
